src/test/deca/test_compilateur/syntax/valid/created/this.deca
// Description :
//    utilisation de this
//
// Resultats :
//		Ok

{
this.a;
this.a();
a();
a;
a.a;
a.a();
}