src/test/deca/test_compilateur/syntax/invalid/created/miscellaneous/cast_missing_opar_1.deca
// Description :
//    cast manque de la premiere parenthes )
//
// Resultats :
//		Syntaxe error

{
a = (a(a);
}